--- a/bridge.html
+++ b/bridge.html
@@ -502,6 +502,26 @@
                                             </div>
                                             <button class="connect-btn">Connect</button>
                                         </div>
+
+                                        <div class="id-add-block">
+                                            <div class="id-add-wrapper">
+                                                <div class="id-inp-block">
+                                                    <input type="text" class="id-inp">
+                                                </div>
+                                                <button class="id-copy-btn">
+                                                    <img src="img/td-copy-new.svg" alt="">
+                                                </button>
+                                            </div>
+                                            <div class="verify-det">
+                                                <span class="verified">
+                                                    <img src="img/check-circle-fill.svg" alt=""> Verified
+                                                </span>
+                                                <span class="invalid">
+                                                    <img src="img/x-circle-fill.svg" alt=""> Invalid
+                                                </span>
+                                            </div>
+                                        </div>
+
                                         <div class="data-connect-card">
                                             <div class="data-title-block">
                                                 <div class="left-block d-flex">
