--- a/bridge.html
+++ b/bridge.html
@@ -658,7 +658,16 @@
                                     <div class="my-transaction-title">
                                         <img src="img/my-trans.svg" alt=""> My Transaction
                                     </div>
-        
+                                    
+                                    <div class="title-search-box">
+                                        <div class="input-group">
+                                            <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-search">
+                                            <button class="btn" type="button" id="button-search">
+                                                <img src="img/search.svg" alt="">
+                                            </button>
+                                        </div>
+                                    </div>
+
                                     <div class="my-transaction-card">
                                         <div class="status-block sts-delivered">
                                             <span class="sts-label">Status :</span>
