bridge table update

--- a/bridge.html
+++ b/bridge.html
@@ -957,6 +957,7 @@
                                     <table class="table custom-table">
                                         <thead>
                                             <tr>
+                                                <th class="acc-actn"></th>
                                                 <th>
                                                     <div class="th-sort-col pointer-cursor">
                                                         Status
@@ -979,6 +980,12 @@
                                         </thead>
                                         <tbody>
                                             <tr>
+                                                <td>
+                                                    <button class="table-acc-btn">
+                                                        <img src="img/acc-plus-lg.svg" alt="">
+                                                        <!-- <img src="img/acc-dash.svg" alt=""> -->
+                                                    </button>
+                                                </td>
                                                 <td class="sts-td sts-delivered">
                                                     <span class="sts-ind "></span> Delivered
                                                 </td>
@@ -1016,8 +1023,67 @@
                                                     about 12 hours ago
                                                 </td>
                                             </tr>
+
+                                            <tr>
+                                                <td colspan="6">
+                                                    <div class="more-det-outer">
+                                                        <h4 class="status-title">Status</h4>
+                                                        <div class="more-det-row">
+                                                            <div class="more-det-col">
+                                                                <h5>Executer <span class="lbl-sm">Bitgo</span> <span class="status">Succeeded</span></h5>
+                                                                <div class="id-data-col">
+                                                                    <div class="data-id">
+                                                                        sgddh145xyxsgddh145xyx...
+                                                                    </div>
+                                                                    <button class="more-sm-btn id-copy-btn">
+                                                                        <img src="img/td-copy-new.svg" alt="">
+                                                                    </button>
+                                                                    <button class="more-sm-btn id-open-btn">
+                                                                        <img src="img/box-arrow-up-right.svg" alt="">
+                                                                    </button>
+                                                                </div>
+                                                            </div>
+                                                            
+                                                            <div class="more-det-col">
+                                                                <h5>Executer <span class="status status-warning">In progress</span></h5>
+                                                                <div class="id-data-col">
+                                                                    <div class="data-id">
+                                                                        sgddh145xyxsgddh145xyx...
+                                                                    </div>
+                                                                    <button class="more-sm-btn id-copy-btn">
+                                                                        <img src="img/td-copy-new.svg" alt="">
+                                                                    </button>
+                                                                    <button class="more-sm-btn id-open-btn">
+                                                                        <img src="img/box-arrow-up-right.svg" alt="">
+                                                                    </button>
+                                                                </div>
+                                                            </div>
+                                                            <div class="more-det-col">
+                                                                <h5>Executer <span class="status status-dngr">Error</span></h5>
+                                                                <div class="id-data-col">
+                                                                    <div class="data-id">
+                                                                        sgddh145xyxsgddh145xyx...
+                                                                    </div>
+                                                                    <button class="more-sm-btn id-copy-btn">
+                                                                        <img src="img/td-copy-new.svg" alt="">
+                                                                    </button>
+                                                                    <button class="more-sm-btn id-open-btn">
+                                                                        <img src="img/box-arrow-up-right.svg" alt="">
+                                                                    </button>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
         
                                             <tr>
+                                                <td>
+                                                    <button class="table-acc-btn">
+                                                        <img src="img/acc-plus-lg.svg" alt="">
+                                                        <!-- <img src="img/acc-dash.svg" alt=""> -->
+                                                    </button>
+                                                </td>
                                                 <td class="sts-td">
                                                     <span class="sts-ind"></span> Confirm
                                                 </td>
@@ -1056,6 +1122,12 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td>
+                                                    <button class="table-acc-btn">
+                                                        <img src="img/acc-plus-lg.svg" alt="">
+                                                        <!-- <img src="img/acc-dash.svg" alt=""> -->
+                                                    </button>
+                                                </td>
                                                 <td class="sts-td sts-delivered">
                                                     <span class="sts-ind "></span> Delivered
                                                 </td>
@@ -1094,6 +1166,12 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td>
+                                                    <button class="table-acc-btn">
+                                                        <img src="img/acc-plus-lg.svg" alt="">
+                                                        <!-- <img src="img/acc-dash.svg" alt=""> -->
+                                                    </button>
+                                                </td>
                                                 <td class="sts-td sts-delivered">
                                                     <span class="sts-ind "></span> Delivered
                                                 </td>
@@ -1132,6 +1210,12 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td>
+                                                    <button class="table-acc-btn">
+                                                        <img src="img/acc-plus-lg.svg" alt="">
+                                                        <!-- <img src="img/acc-dash.svg" alt=""> -->
+                                                    </button>
+                                                </td>
                                                 <td class="sts-td sts-delivered">
                                                     <span class="sts-ind "></span> Delivered
                                                 </td>
@@ -1170,6 +1254,12 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td>
+                                                    <button class="table-acc-btn">
+                                                        <img src="img/acc-plus-lg.svg" alt="">
+                                                        <!-- <img src="img/acc-dash.svg" alt=""> -->
+                                                    </button>
+                                                </td>
                                                 <td class="sts-td sts-delivered">
                                                     <span class="sts-ind "></span> Delivered
                                                 </td>
