--- a/bridge.html
+++ b/bridge.html
@@ -732,6 +732,44 @@
                                             </div>
                                             
                                         </div>
+
+                                        <div class="more-card-data-cover">
+                                            <h3>Status</h3>
+                                            <div class="more-det-col">
+                                                <h5>Executer <span class="lbl-sm">Bitgo</span> <span class="status">Succeeded</span></h5>
+                                                <div class="id-data-col">
+                                                    <div class="data-id">
+                                                        sgddh145xyxsgddh145xyx...
+                                                    </div>
+                                                    <button class="more-sm-btn id-copy-btn">
+                                                        <img src="img/td-copy-new.svg" alt="">
+                                                    </button>
+                                                    <button class="more-sm-btn id-open-btn">
+                                                        <img src="img/box-arrow-up-right.svg" alt="">
+                                                    </button>
+                                                </div>
+                                            </div>
+                                            <div class="more-det-col">
+                                                <h5>Executer <span class="lbl-sm">Bitgo</span> <span class="status">Succeeded</span></h5>
+                                                <div class="id-data-col">
+                                                    <div class="data-id">
+                                                        sgddh145xyxsgddh145xyx...
+                                                    </div>
+                                                    <button class="more-sm-btn id-copy-btn">
+                                                        <img src="img/td-copy-new.svg" alt="">
+                                                    </button>
+                                                    <button class="more-sm-btn id-open-btn">
+                                                        <img src="img/box-arrow-up-right.svg" alt="">
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="show-more-btn-block">
+                                            <button class="show-more-btn-mob">
+                                                Show More <img src="img/more-down.svg" alt="">
+                                            </button>
+                                        </div>
                                     </div>
         
                                     <div class="my-transaction-card">
