--- a/bridge.html
+++ b/bridge.html
@@ -466,6 +466,13 @@
                                     <div class="tut-block">
                                         <img src="img/info-circle.svg" alt=""> <a class="tut-link" href="#">Read the Tutorial before bridging ?</a>
                                     </div>
+
+                                    <div class="tut-info-block mt-3">
+                                        <span class="info-i">
+                                            <img src="img/info-circle-sm.svg" alt="">
+                                        </span>
+                                        <div class="info-data">For a smoother experience, please use the <b>Petra Wallet</b> instead of Pontem. Pontem may not work reliably across both desktop and mobile.</div>
+                                    </div>
                                 </div>
                                 
                                 <div class="tokn-liq-det-block">
@@ -555,7 +562,7 @@
                                                 <div class="coin-wrapper d-flex">
                                                     <div class="props-val">
                                                         <div class="props-inp-block">
-                                                            <input class="props-inp" type="text" value="0">
+                                                            <input class="props-inp" type="text" value="Connect Both Wallets">
                                                         </div>
                                                         <div class="max-btn-block">
                                                             <button class="max-btn">Max</button>
