--- a/bridge.html
+++ b/bridge.html
@@ -105,8 +105,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <img src="img/nav-briefcase.svg" alt="">
-                                <span class="nav-label">Portfolio</span>
+                                <img src="img/bridge-nav-icon.svg" alt="">
+                                <span class="nav-label">Bridge Props</span>
+                                <span class="new-label">New</span>
                             </a>
                         </li>
                         <li class="nav-item">
