--- a/bridge.html
+++ b/bridge.html
@@ -461,11 +461,34 @@
                     <div class="bridge-tab-body">
                         <div class="bridge-body-cover">
                             <div class="bridge-data-outer">
-                                <div class="bridge-banner-sec">
+                                <!-- <div class="bridge-banner-sec">
                                     <h2>Bridge Props</h2>
                                     <p>Use Propbase Bridge to transfer an asset across multiple chains.</p>
                                     <div class="tut-block">
-                                        <img src="img/info-circle.svg" alt=""> <a class="tut-link" href="#">Read the Tutorial before bridging ?</a>
+                                        <p>
+                                            <img src="img/info-circle.svg" alt="">
+                                        </p>
+                                        <p>You can bridge up to 100,000 PROPS per transaction.</p>
+                                        <p>For larger amounts, please wait 2 minutes between transactions to avoid errors.</p>
+                                    </div>
+
+                                    <div class="tut-info-block mt-3">
+                                        <span class="info-i">
+                                            <img src="img/info-circle-sm.svg" alt="">
+                                        </span>
+                                        <div class="info-data">For a smoother experience, please use the <b>Petra Wallet</b> instead of Pontem. Pontem may not work reliably across both desktop and mobile.</div>
+                                    </div>
+                                </div> -->
+                                <div class="bridge-banner-sec">
+                                    <h2>Bridge Props</h2>
+                                    <p>Use Propbase Bridge to transfer an asset across multiple chains.</p>
+                                    <div class="tut-block bridge-info-1">
+                                        <div class="info-i">
+                                            <img src="img/info-circle.svg" alt="">
+                                        </div>
+                                        <div class="info-data">
+                                            <p>You can bridge up to <span>100,000</span> PROPS per transaction. For larger amounts, please wait 2 minutes between transactions to avoid errors.</p>
+                                        </div>
                                     </div>
 
                                     <div class="tut-info-block mt-3">
@@ -475,6 +498,7 @@
                                         <div class="info-data">For a smoother experience, please use the <b>Petra Wallet</b> instead of Pontem. Pontem may not work reliably across both desktop and mobile.</div>
                                     </div>
                                 </div>
+                                
                                 
                                 <div class="tokn-liq-det-block">
                                     <div class="tokn-liq-card d-flex">
