--- a/bridge.html
+++ b/bridge.html
@@ -690,7 +690,28 @@
                                     <div class="my-transaction-title">
                                         <img src="img/my-trans.svg" alt=""> My Transaction
                                     </div>
-                                    
+                                    <!-- transaction id mob -->
+                                    <div class="transaction-id-mob-wrapper">
+                                        <div class="id-block-sm">
+                                            <div class="icon-sm">
+                                                <img src="img/props3.svg" alt="">
+                                            </div>
+                                            <div class="trns-id">ffew...d7t</div>
+                                            <button class="id-copy-btn">
+                                                <img src="img/td-copy-new.svg" alt="">
+                                            </button>
+                                        </div>
+                                        <div class="id-block-sm">
+                                            <div class="icon-sm">
+                                                <img src="img/connected-icon.png" alt="">
+                                            </div>
+                                            <div class="trns-id">ffew...d7t</div>
+                                            <button class="id-copy-btn">
+                                                <img src="img/td-copy-new.svg" alt="">
+                                            </button>
+                                        </div>
+                                    </div>
+
                                     <div class="title-search-box">
                                         <div class="input-group">
                                             <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-search">
@@ -971,6 +992,24 @@
                             <div class="sec-title-block sec-title-filter">
                                 <h2 class="sec-title">Your History</h2>
                                 <div class="block-right">
+                                    <div class="id-block-sm me-2">
+                                        <div class="icon-sm">
+                                            <img src="img/props3.svg" alt="">
+                                        </div>
+                                        <div class="trns-id">ffew...d7t</div>
+                                        <button class="id-copy-btn">
+                                            <img src="img/td-copy-new.svg" alt="">
+                                        </button>
+                                    </div>
+                                    <div class="id-block-sm me-2">
+                                        <div class="icon-sm">
+                                            <img src="img/connected-icon.png" alt="">
+                                        </div>
+                                        <div class="trns-id">ffew...d7t</div>
+                                        <button class="id-copy-btn">
+                                            <img src="img/td-copy-new.svg" alt="">
+                                        </button>
+                                    </div>
                                     <div class="title-search-box me-2">
                                         <div class="input-group">
                                             <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-search">
