--- a/props-price-tab-mob.html
+++ b/props-price-tab-mob.html
@@ -27,7 +27,15 @@
                 <h4>$ 10,808,778 USD</h4>
             </div>
         </div>
-
+        <div class="g-filter-block">
+            <div class="filter-btn-cover">
+                <button class="filter-btn active">1D</button>
+                <button class="filter-btn">7D</button>
+                <button class="filter-btn">1M</button>
+                <button class="filter-btn">1Y</button>
+                <button class="filter-btn">All</button>
+            </div>
+        </div>
         <div class="graph-block">
             <img style="width: 100%;" src="img/graph1.png" alt="">
         </div>
