--- a/props-price-tab-mob.html
+++ b/props-price-tab-mob.html
@@ -18,7 +18,7 @@
                 <h4>$ 0.0243 USD</h4>
             </div>
             <div class="data-block">
-                <p>Total Market Cap</p>
+                <p>Total Market Cap :</p>
                 <h4>$ 10,808,778 USD</h4>
             </div>
         </div>
