mob and input box

--- a/liquidity-pool-admin.html
+++ b/liquidity-pool-admin.html
@@ -723,6 +723,160 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Mob sec -->
+                    <div class="pool-mob-block">
+                        <div class="pool-mob-card">
+                            <div class="pool-td-block">
+                                <div class="td-logo-block">
+                                    <span class="logo-icn">
+                                        <img src="img/logo-img-coin.svg" alt="">
+                                    </span>
+                                    <span class="logo-icn">
+                                        <img src="img/aptos-sm-light.svg" alt="">
+                                    </span>
+                                </div>
+                                <div class="txt-block">
+                                    <h4>PROPS - APT</h4>
+                                    <p>Aptos Coin Verified</p>
+                                </div>
+                            </div>
+
+                            <div class="card-det-wrapper d-flex">
+                                <div class="card-det-sm">
+                                    <p>Volume 24H <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>< $1</h4>
+                                </div>
+                                <div class="card-det-sm">
+                                    <p>APR <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>< 0.01%</h4>
+                                </div>
+                                <div class="card-det-sm">
+                                    <p>TVL <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>$3,482,910.45 USD</h4>
+                                </div>
+                            </div>
+
+                            <div class="btn-block-btm">
+                                <button class="primary-btn"><img src="img/plus-white.svg" alt=""> Create a Pool</button>
+                                <button class="primary-btn"><img src="img/swap-white.svg" alt=""> Swap</button>
+                            </div>
+
+                        </div>
+
+                        <div class="pool-mob-card">
+                            <div class="pool-td-block">
+                                <div class="td-logo-block">
+                                    <span class="logo-icn">
+                                        <img src="img/logo-img-coin.svg" alt="">
+                                    </span>
+                                    <span class="logo-icn">
+                                        <img src="img/aptos-sm-light.svg" alt="">
+                                    </span>
+                                </div>
+                                <div class="txt-block">
+                                    <h4>PROPS - APT</h4>
+                                    <p>Aptos Coin Verified</p>
+                                </div>
+                            </div>
+
+                            <div class="card-det-wrapper d-flex">
+                                <div class="card-det-sm">
+                                    <p>Volume 24H <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>< $1</h4>
+                                </div>
+                                <div class="card-det-sm">
+                                    <p>APR <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>< 0.01%</h4>
+                                </div>
+                                <div class="card-det-sm">
+                                    <p>TVL <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>$3,482,910.45 USD</h4>
+                                </div>
+                            </div>
+
+                            <div class="btn-block-btm">
+                                <button class="primary-btn"><img src="img/plus-white.svg" alt=""> Create a Pool</button>
+                                <button class="primary-btn"><img src="img/swap-white.svg" alt=""> Swap</button>
+                            </div>
+
+                        </div>
+
+                        <div class="pool-mob-card">
+                            <div class="pool-td-block">
+                                <div class="td-logo-block">
+                                    <span class="logo-icn">
+                                        <img src="img/logo-img-coin.svg" alt="">
+                                    </span>
+                                    <span class="logo-icn">
+                                        <img src="img/aptos-sm-light.svg" alt="">
+                                    </span>
+                                </div>
+                                <div class="txt-block">
+                                    <h4>PROPS - APT</h4>
+                                    <p>Aptos Coin Verified</p>
+                                </div>
+                            </div>
+
+                            <div class="card-det-wrapper d-flex">
+                                <div class="card-det-sm">
+                                    <p>Volume 24H <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>< $1</h4>
+                                </div>
+                                <div class="card-det-sm">
+                                    <p>APR <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>< 0.01%</h4>
+                                </div>
+                                <div class="card-det-sm">
+                                    <p>TVL <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>$3,482,910.45 USD</h4>
+                                </div>
+                            </div>
+
+                            <div class="btn-block-btm">
+                                <button class="primary-btn"><img src="img/plus-white.svg" alt=""> Create a Pool</button>
+                                <button class="primary-btn"><img src="img/swap-white.svg" alt=""> Swap</button>
+                            </div>
+
+                        </div>
+
+                        <!-- Pagination -->
+                         <div class="table-pagination-cover">
+                            <div class="select-block">
+                                Rows per page
+                                <select class="pagination-select" name="" id="">
+                                    <option value="">1</option>
+                                    <option value="">2</option>
+                                    <option value="">3</option>
+                                </select>
+                            </div>
+                            <div class="entries-block">
+                                Showing 1 to 10 of 39 entries
+                            </div>
+                            <div class="pagination-block">
+                                <nav aria-label="Page">
+                                    <ul class="pagination">
+                                        <li class="page-item">
+                                            <a class="page-link" href="#" aria-label="Previous">
+                                                <img src="img/arw-left.svg" alt="">
+                                            </a>
+                                        </li>
+                                        <li class="page-item"><a class="page-link active" href="#">1</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                        <li class="page-item"><span class="page-link-dots">&#183;&#183;&#183;</span></li>
+                                        <li class="page-item"><a class="page-link" href="#">10</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">11</a></li>
+                                        <li class="page-item">
+                                            <a class="page-link" href="#" aria-label="Next">
+                                                <img src="img/arw-right.svg" alt="">
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
                     
                 </div>
 
@@ -758,7 +912,7 @@
                 <div class="liq-card">
                     <div class="top-item">
                         <div class="val-left">
-                            1.5
+                            <input type="text" class="val-inp" value="0.5">
                         </div>
                         <div class="data-block-right">
                             <div class="select-block">
@@ -794,7 +948,7 @@
                 <div class="liq-card">
                     <div class="top-item">
                         <div class="val-left">
-                            1.5
+                            <input type="text" class="val-inp" value="0.5">
                         </div>
                         <div class="data-block-right">
                             <div class="select-block">
@@ -832,7 +986,12 @@
                         Curve Type <span class="info"><img src="img/info-circle.svg" alt=""></span>
                     </div>
                     <div class="type-info info-off">
-                        <span class="info"><img src="img/info-circle.svg" alt=""></span> Uncorrelated
+                        <span class="info"><img src="img/info-circle.svg" alt=""></span>
+                        <select class="type-select">
+                            <option value="">Uncorrelated</option>
+                            <option value="">Uncorrelated</option>
+                            <option value="">Uncorrelated</option>
+                        </select>
                     </div>
                 </div>
     
